--- a/package.json
+++ b/package.json
@@ -37,12 +37,13 @@
   "dependencies": {
     "@babel/runtime": "^7.7.7",
     "@tarojs/components": "3.4.8",
-    "@tarojs/runtime": "3.4.8",
-    "@tarojs/taro": "3.4.8",
     "@tarojs/plugin-framework-react": "3.4.8",
     "@tarojs/react": "3.4.8",
+    "@tarojs/runtime": "3.4.8",
+    "@tarojs/taro": "3.4.8",
+    "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react": "^17.0.0"
+    "taro-ui": "3.0.0-alpha.10"
   },
   "devDependencies": {
     "@types/webpack-env": "^1.13.6",
