--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@tarojs/taro": "3.4.8",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "taro-ui": "3.0.0-alpha.10"
+    "taro-ui": "^3.1.0-beta.2"
   },
   "devDependencies": {
     "@types/webpack-env": "^1.13.6",
