--- a/package.json
+++ b/package.json
@@ -41,8 +41,12 @@
     "@tarojs/react": "3.4.8",
     "@tarojs/runtime": "3.4.8",
     "@tarojs/taro": "3.4.8",
+    "dayjs": "^1.11.2",
+    "js-cookie": "^3.0.1",
+    "lodash": "^4.17.21",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "taro-axios": "^1.1.1",
     "taro-ui": "^3.1.0-beta.2"
   },
   "devDependencies": {
