--- a/project.private.config.json
+++ b/project.private.config.json
@@ -6,8 +6,8 @@
         "miniprogram": {
             "list": [
                 {
-                    "name": "pages/add/index",
-                    "pathName": "pages/add/index",
+                    "name": "pages/mine/index",
+                    "pathName": "pages/mine/index",
                     "query": "",
                     "launchMode": "default",
                     "scene": null
